RequiredFiles/myPackage/objects/Required_File__c.object
<CustomObject>
    <label>Required File</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>Required File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Field_Name__c</fullName>
        <label>Full Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>